<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              style="@style/MatchMatch.Vertical.Common">

    <com.chunze.baselibrary.widgets.HeaderBar
        android:id="@+id/mRegisterHeaderBar"
        style="@style/MatchWrap"
        app:titleText="@string/register"/>

    <LinearLayout
        style="@style/MatchWrap.Vertical"
        android:layout_margin="@dimen/common_margin"
        android:background="@drawable/border_corner_all">

        <LinearLayout style="@style/MatchWrap.Horizontal">

            <EditText
                android:id="@+id/mMobileEt"
                android:layout_width="0dp"
                android:layout_height="@dimen/common_line_height"
                android:layout_weight="1.0"
                android:background="@null"
                android:drawableLeft="@drawable/icon_phone"
                android:drawablePadding="@dimen/common_padding_small"
                android:hint="@string/Please_enter_your_mobile_number"
                android:inputType="phone"
                android:paddingLeft="@dimen/common_padding_small"/>

            <View style="@style/DividerFixedWidth.MarginTopBottom"/>

            <com.chunze.baselibrary.widgets.VerifyButton
                android:id="@+id/mVerifyCodeBtn"
                style="@style/WrapMatch"
                android:background="@null"
                android:text="@string/getCode"
                android:textColor="@color/common_blue"/>
        </LinearLayout>

        <View style="@style/DividerFixedHeight"/>

        <EditText
            android:id="@+id/mVerifyCodeEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:background="@null"
            android:drawableLeft="@drawable/icon_verify_code"
            android:drawablePadding="@dimen/common_padding_small"
            android:hint="@string/Please_enter_SMS_verification_code"
            android:inputType="number"
            android:paddingLeft="@dimen/common_padding_small"
            />

        <View style="@style/DividerFixedHeight"/>

        <EditText
            android:id="@+id/mPwdEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:background="@null"
            android:drawableLeft="@drawable/icon_pwd"
            android:drawablePadding="@dimen/common_padding_small"
            android:hint="@string/Please_enter_your_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/common_padding_small"/>

        <View style="@style/DividerFixedHeight"/>

        <EditText
            android:id="@+id/mPwdConfirmEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:background="@null"
            android:drawableLeft="@drawable/icon_pwd"
            android:drawablePadding="@dimen/common_padding_small"
            android:hint="@string/Please_enter_your_password_again"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/common_padding_small"/>
    </LinearLayout>

    <Button
        android:id="@+id/mRegisterBtn"
        style="@style/FullBtnStyle"
        android:text="@string/register"/>
</LinearLayout>
